# regelrecht

./: .dev-relevant-articles.py  .dockerignore  .env.editor-local.example  .env.example  .env.sso-local.example  .gitignore  .npmrc  .pre-commit-config.yaml  .yamllint  CLAUDE.md  Cargo.toml  Justfile  PLAN.md  README.md  REVIEW.md  aanmelden.html  build.sh  corpus-registry.local-only.yaml  corpus-registry.localonly.yaml  corpus-registry.yaml  deny.toml  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  script.js  serve.sh  styles.css
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
aanmelden/: index.html
bdd/: README.md  grammar.yaml
blog/: index.md
cases/: README.md
corpus/: README.md
corpus-demo/: README.md  demo-index.yaml
demo/: index.html  legal-review-findings.md  server.py
dev/: compose.native.yaml  dev-down.mjs  dev.mjs  grafana-datasource-local.yaml
doc/: glossary.md
docs/: .pa11yci  Dockerfile  aanmelden.md  astro.config.mjs  auth-and-roles.md  faq.md  gerelateerde-projecten.md  index.md  nginx.conf  package-lock.json  package.json  team.md  tools.md
features/: bezwaartermijn.feature  bijstand.feature  date_operations.feature  einddatum.feature  erfgrensbeplanting.feature  financieel_cv_koen.feature  financieel_cv_sadee.feature  hhnk_kwijtschelding_machinereadable_units.feature  jobcoaching_werkplekaanpassing.feature  kwijtschelding_hhnk.feature  lage_inkomensvoordeel.feature  loondispensatie.feature  loonkostensubsidie.feature  loonkostenvoordeel.feature  multi_output.feature  (+11 more)
(+935 files in other folders)
