[workspace]
resolver = "2"
members = [
    "packages/admin",
    "packages/corpus",
    "packages/engine",
    "packages/harvester",
    "packages/pipeline",
]

[workspace.package]
edition = "2021"
authors = ["MinBZK <noreply@minbzk.nl>"]
license = "MIT"
repository = "https://github.com/MinBZK/regelrecht-mvp"
homepage = "https://github.com/MinBZK/regelrecht-mvp"
